# spine-rs

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  STATUS.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/scripts/: perf_compare.py
.github/workflows/: ci.yml  perf-bench.yml  release.yml
apps/desktop/: index.html  package.json  vitest.config.ts
apps/desktop/src/: AddInstanceDialog.tsx  AddSubjectDialog.tsx  App.css  App.tsx  BatchInspector.tsx  Bootstrap.tsx  CommandPalette.tsx  FacetBrowser.tsx  GraphView.tsx  Inspector.tsx  JobsIndicator.tsx  LibraryErrorModal.tsx  Reader.tsx  ReconcileDrawer.tsx  RemoveBookDialog.tsx  RenameDialog.tsx  Settings.tsx  TimelineView.tsx  foliate.d.ts  main.tsx  projections.ts  readerFrontends.ts  tokens.css  tokens.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/resources/: calibre-template.db
apps/desktop/src-tauri/resources/welcome/: README.md  welcome.epub  welcome.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/__tests__/: AddInstanceDialog.test.tsx  App.utils.test.ts  InspectorInferredTab.test.tsx  JobsIndicator.test.ts  ReconcileDrawerWired.test.tsx  Settings.test.tsx
apps/desktop/src/api/: client.ts
apps/desktop/src/components/: Badge.tsx  Cover.tsx  CoverImage.tsx  Icon.tsx  ReadMeter.tsx
apps/desktop/src/grids/: CoverGrid.tsx  DenseTable.tsx  HybridList.tsx
apps/desktop/src/hooks/: usePersistentState.ts
apps/desktop/src/inspector/: InspectorInferredTab.tsx
apps/desktop/src/palette/: registerCommands.ts
apps/desktop/src/shell/: EmptyStateCard.tsx  FilterBar.tsx  Footer.tsx  LibraryHeaderCard.tsx  ProvDot.tsx  ShelfContextMenu.tsx  ShelfInlineEditor.tsx  ShelfMark.tsx  ShelvesData.ts  ShelvesSection.tsx  Sidebar.tsx  SidebarRail.tsx  SidebarResizeHandle.tsx  StatusBar.tsx  TitleBar.tsx  Toolbar.tsx
apps/desktop/src/utils/: formatters.ts  identifiers.ts  names.ts
apps/mobile-reader/: README.md  app.json  eas.json  index.js  package.json  tsconfig.json
apps/mobile-reader/app/: [...share].tsx  _layout.tsx  index.tsx  library.tsx  settings.tsx
apps/mobile-reader/app/reader/: [id].tsx
apps/mobile-reader/assets/: reader.html
apps/mobile-reader/scripts/: archive-apk.mjs  build-and-verify.mjs  build-icons.py  build-reader-html.mjs  reader-bootstrap.js  reader.css  sync-version.mjs  verify-apk.mjs
apps/mobile-reader/src/: dictionaries.ts  storage.ts  themes.ts  types.ts  version.ts
apps/mobile/android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
artifacts/: S3_Reference.epub
artifacts/alpha/: BUILDS.md  README.md
artifacts/apk/: BUILDS.md
benchmark_tool/: Cargo.toml
benchmark_tool/src/: main.rs
core/: Cargo.toml
core/calibre-db/: Cargo.toml
core/calibre-db/src/: lib.rs  session.rs
core/calibre-db/tests/: write_surface_test.rs
core/spine-api/: Cargo.toml
core/spine-api/src/: lib.rs  v1.rs
core/spine-bf/: Cargo.toml
core/spine-bf/benches/: baseline.json  write_paths.rs
core/spine-bf/data/: relators.json
core/spine-bf/src/: author_sort.rs  lib.rs  write.rs
core/spine-cli/: Cargo.toml
core/spine-cli/src/: main.rs
core/spine-db/: Cargo.toml
core/spine-db/src/: lib.rs
core/spine-dc/: Cargo.toml
core/spine-epub-meta/: Cargo.toml
core/spine-fmt-docx/: Cargo.toml
core/spine-fmt-docx/src/: lib.rs
core/spine-fmt-epub/: Cargo.toml
core/spine-fmt-epub/benches/: baseline.json  read_paths.rs
core/spine-fmt-epub/benches/fixtures/: README.md
core/spine-fmt-epub/src/: container.rs  edtf.rs  lib.rs  opf.rs  toc.rs
core/spine-fmt-fb2/: Cargo.toml
core/spine-fmt-html/: Cargo.toml
core/spine-fmt-mobi/: Cargo.toml
core/spine-fmt-pdf/: Cargo.toml
core/spine-fmt-rtf/: Cargo.toml
core/spine-fmt-txt/: Cargo.toml
core/spine-jni/: Cargo.toml  README.md
core/spine-jni/src/: lib.rs
core/spine-kindle/: Cargo.toml
core/spine-kindle/src/: lib.rs
core/spine-marc/: Cargo.toml
core/spine-marc/src/: lib.rs
core/spine-marc/tests/: integration_test.rs
core/spine-meta/: Cargo.toml
core/spine-meta/src/: epub.rs  jsonld.rs  lib.rs  reconcile.rs  sweep.rs
core/spine-oeb/: Cargo.toml
core/spine-oeb/src/: lib.rs  metadata.rs  oeb.rs  predicates.rs  profile.rs
core/spine-onix/: Cargo.toml
core/spine-srv/: Cargo.toml
core/spine-srv/src/: api_v1.rs  auth.rs  backup.rs  inference.rs  ingest.rs  jobs.rs  lib.rs  main.rs  reconcile.rs
core/spine-srv/tests/: adr_014_endpoints_test.rs  bearer_auth_test.rs  db_test.rs  inferred_endpoints_test.rs  library_backup_test.rs  reconcile_endpoints_test.rs  router_test.rs  sprint_10_5_reconcile_first_test.rs  wave2_api_test.rs
core/spine-test-corpus/: Cargo.toml
core/spine-test-corpus/src/: lib.rs
docs/: ADR_002_specta_vs_typeshare.md  ADR_003_mobile_tokio_lifecycle.md  ADR_004_URI_Normalization_Rules.md  ADR_005_LoC_Cache_Strategy.md  ADR_006_Reconciliation_Semantics.md  ADR_007_Back_Matter_Stability.md  ADR_008_Hub_Semantics.md  ADR_009_Confidence_Thresholds.md  ADR_010_Federation_Merge_Conflicts.md  ADR_011_mobile_compose.md  ADR_013_book_dto_multi_instance_exposure.md  ADR_014_spine_bf_write_api_shacl.md  ADR_015_reconcile_first_ux.md  ADR_016_inferred_graph_write_path.md  ADR_017_conversion_pipeline_ir.md  ADR_018_epub_writer_determinism.md  ADR_019_azw3_writer_scope.md  ADR_023_plugin_architecture.md  CALIBRE_INVENTORY.md  CALIBRE_TEMPLATE_DB.md  DEV_WORKFLOW.md  KINDLE_SIDELOADING_COVERS.md  MVP_DESKTOP_MOBILE_PLAN.md  READER_FRONTENDS.md  READER_TRANSPORT.md  TECH_DEBT.md  UI_UX_STRATEGY.md  openapi_book_resource.yaml
docs/api-reference/: loc-id-service.md
docs/refs-other/: react-native-ui-reference.md  responsive-universal-reference.md
docs/research/: BYTE_IDENTICAL_CONVERSION_PROTOCOL_v1.md  BYTE_IDENTICAL_CONVERSION_PROTOCOL_v2.md  BYTE_IDENTICAL_CONVERSION_PROTOCOL_v3.md  COLLECTIONS_SKETCH.md  DESIGNER_FOLLOWUP_ASKS.md  SIDEBAR_IMPLEMENTATION_LOCKED.md
scripts/: build-alpha.sh  build-apk.sh
(+70 files in other folders)
