[package]
name = "spine-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
oxrdf = { workspace = true }
spine-api = { path = "../spine-api" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10.1"
