[package]
name = "spine-fmt-epub"
version = "0.1.0"
edition = "2024"

[dependencies]
spine-oeb = { path = "../spine-oeb" }
chrono = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "read_paths"
harness = false
