[package]
name = "spine-meta"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
quick-xml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
spine-api = { version = "0.1.0", path = "../spine-api" }
spine-bf = { path = "../spine-bf" }
spine-db = { path = "../spine-db" }
zip = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockito = "1.7.2"
