[package]
name = "spine-desktop"
version = "0.1.0"
description = "Spine Desktop"
authors = ["thereprocase"]
edition = "2021"

[lib]
name = "spine_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
spine-srv = { path = "../../../core/spine-srv" }
spine-api = { path = "../../../core/spine-api" }
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.5", features = ["util"] }
http = "1.0"
bytes = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5.0"

calibre-db = { path = "../../../core/calibre-db" }
spine-db = { path = "../../../core/spine-db" }
spine-meta = { path = "../../../core/spine-meta" }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
